--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div style="background-color: aliceblue; margin: -9px; padding: 9px;">
         <table cellspacing="50">
             <tr>
-                <td><img src="hamza.jpg" alt="ladla's profil picture" style="height: 300px; width: 300px; border-radius: 50%;"></td>
+                <td><img src="ladla.png" alt="ladla's profil picture" style="height:400px"></td>
                 <td>
                     <h1>Ladla Hamza</h1>
                     <p>Founder & CIO of <strong><em><a style="text-decoration: none;" href="http://hamzasial.000.pe/?i=1">Ladla's Acedmy</a></em></strong></p>
