--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: Arial, sans-serif;
         }
         body {
             padding: 10px;
@@ -17,11 +18,18 @@
         .container-one {
         width: 100%;
         padding: 10px;
+        
         }
         .hobbies{
+            padding: 5px;
             padding-left: 20px;
         }
         .skills{
+            padding: 5px;
+            padding-left: 20px;
+        }
+        .ownwebsites{
+            padding: 5px;
             padding-left: 20px;
         }
         h3{
@@ -136,10 +144,12 @@
             </div>
             <hr >
             <h3>Own Websites</h3>
+            <div class="ownwebsites">
             <ul>
                 <li><p> You can learn several courses there for free <a style="text-decoration: none;" href="http://ladlaacedmy.000.pe/">Ladla Acedmy</a></p></li>
                 <li><p>You can also learn several courses from this Website for free <a style="text-decoration: none;" href="http://hamzasial.000.pe/?i=1"> Online Courses</a></p></li>
             </ul>
+        </div>
             <hr>
         </div>
     </main>
